web page enhancement

--- a/checker_frontend/src/index.css
+++ b/checker_frontend/src/index.css
@@ -6,7 +6,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #022836;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -43,12 +43,14 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #929c4a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #4750fb;
+  background-color: #e7f399;
+  color: #15212b;
 }
 button:focus,
 button:focus-visible {
